# brag-ai

./: .dockerignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  main.py  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/: git-cliff-config.toml  zizmor.yml
.github/actions/current-version/: action.yaml
.github/workflows/: actionlint.yaml  ci.yaml  codeflash.yaml  contributor-brags.yaml  docs.yaml  publish.yaml  release.yaml  semantic-pull-request-title.yaml  zizmor.yaml
api-reference/: index.html
brag/: __main__.py  cli.py
configuration/: index.html
contributing/: index.html
css/: extra.css
development/: index.html
docs/: api-reference.md  configuration.md  contributing.md  development.md  index.md  installation.md  release-notes.md  usage.md
docs/css/: extra.css
examples/contributors/: README.md
installation/: index.html
release-notes/: index.html
scripts/: docs-build.sh  docs-serve.sh  format.sh  init.sh  lint.sh  pre-commit-check.sh  test-cov.sh  test.sh  type-check.sh
search/: search_index.json
src/brag/: __init__.py  __main__.py  agents.py  asyncio.py  batching.py  cli.py  github_commit_loader.py  github_commits.py  model.py  models.py  progress.py  repository.py  text_formatters.py  tokens.py
src/brag/cli/: __init__.py  self.py
src/brag/sources/: __init__.py  git_commits.py  github_commits.py
tests/: conftest.py
tests/brag/: test_batching.py  test_cli.py  test_repository.py  test_text_formatters.py
usage/: index.html
